# redirective

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  links-export.yaml  links.yaml  redirective.toml  rust-toolchain.toml
.codex/: C++idiomatic-rules.md  C-idiomatic-rules.md  Rust-idiomatic-rules.md  Swift-idiomatic-rules.md  Universal-architectural-rules.md  architecture.md  prd.md
.github/workflows/: ci.yml
scripts/: 1passExport.sh  convert_links_format.sh  entrypoint.sh  export_yourls.sh  run_redirective.sh
src/: cache.rs  config.rs  errors.rs  git_sync.rs  http.rs  main.rs  metrics.rs
static_html/: index.html  jrjconsole.js  shortcodes.txt  styles.css
