[package]
name = "redirective"
version = "0.1.0"
edition = "2024"

[dependencies]
tower = "0.4"
axum = "0.6"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tower-http = { version = "0.3", features = ["serve"] }
git2 = "0.17"
arc-swap = "1.6"
prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
thiserror = "1.0"
toml = "0.7"
